fix: make integration-tests Java 11 compatible (no text blocks)