@@ -16,7 +16,7 @@ class AnalyticsIntegrationTest extends AbstractIntegrationTest {
         Map<String, Object> before = fetchAnalyticsCounters();
         long beforeCreated = longValue(before.getOrDefault("orders.created", 0L));
 
-        var productId = UUID.fromString(fetchCatalogItems().getFirst().get("id").toString());
+        var productId = UUID.fromString(fetchCatalogItems().get(0).get("id").toString());
         createOrder("analytics@example.com", productId, 1);
 
         Map<String, Object> after = Awaitility.await()
@@ -29,6 +29,9 @@ class AnalyticsIntegrationTest extends AbstractIntegrationTest {
     }
 
     private long longValue(Object value) {
-        return value instanceof Number number ? number.longValue() : 0L;
+        if (value instanceof Number) {
+            return ((Number) value).longValue();
+        }
+        return 0L;
     }
 }
